# puremp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  fuzz.yml  release-binaries.yml  release-plz.yml
examples/: alg_bench.rs  bench.rs  factorial_bench.rs  galois_bench.rs  gf_kronecker_bench.rs  poly_bench.rs  rational_e2e_bench.rs  rational_xreduce_bench.rs  strassen_bench.rs  trig_bench.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decimal_roundtrip.rs  int_div_rem.rs  nat_roundtrip.rs  poly_div_rem.rs  rational_reduce.rs
include/: puremp.h
memory/: MEMORY.md  mathesis-consumer.md
src/: algebraic.rs  ball.rs  ball_solve.rs  complex.rs  decimal.rs  dlog.rs  dyadic.rs  ecm.rs  ecpp.rs  elliptic.rs  error.rs  ffi.rs  fixed_float.rs  float.rs  float_consts.rs  float_mp.rs  float_mp_consts.rs  float_reduce.rs  galois.rs  gnfs.rs  identify.rs  inf_rational.rs  int.rs  interval.rs  lattice.rs  lib.rs  limb.rs  matrix.rs  mod_int.rs  modular_poly.rs  nat.rs  num_traits_impls.rs  numberfield.rs  numberfield_class.rs  numberfield_ideal.rs  numberfield_units.rs  padic.rs  poly.rs  poly_factor.rs  poly_finite_field.rs  (+7 more)
tests/: algebraic.rs  algebraic_from_float.rs  ball.rs  ball_solve.rs  complex.rs  complex_float.rs  complex_trig.rs  constants.rs  decimal.rs  dlog.rs  dyadic.rs  eigenvalues.rs  elliptic.rs  ffi_smoke.c  field_matrix.rs  finite_field_factor.rs  fixed_float.rs  float.rs  float_gamma_bessel.rs  float_mp.rs  float_special.rs  float_special2.rs  galois.rs  generic_ring.rs  identify.rs  inf_rational.rs  integration.rs  interval.rs  lattice.rs  matrix.rs  mod_int.rs  num_traits.rs  p2_rounding.rs  padic.rs  poly.rs  poly_factor.rs  poly_fast.rs  primality.rs  property.rs  pslq.rs  (+5 more)
