# Exclude the cargo-fuzz workspace at `fuzz/` from the implicit single-crate
# workspace this package forms. The fuzz crate uses `libfuzzer-sys` (nightly +
# libFuzzer) and is built separately via `cargo +nightly fuzz run <target>`.
[workspace]
exclude = ["fuzz"]

[package]
name = "puremp"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
description = "A pure-Rust arbitrary-precision arithmetic library — integers, rationals and MPFR-class floats — with a dependency-free clean-room core (optional serde/rand bridges), plus a C ABI and a CLI."
repository = "https://github.com/KarpelesLab/puremp"
license = "MIT"
keywords = ["bignum", "bigint", "arbitrary-precision", "rational", "no-std"]
categories = ["mathematics", "no-std", "algorithms"]

[lib]
name = "puremp"

[features]
# `std` is the convenient default; it implies `alloc`. Disable default features
# for a bare `no_std` build (`--no-default-features`), optionally re-enabling
# `alloc` (or a specific type layer) for heap-backed arbitrary-precision types.
#
# The type layers stack bottom-up: `int` (naturals + signed integers) is the
# foundation and `rational` builds on it — together they are the core contract.
# `float` is a separable layer (not part of the core contract) but is enabled
# by default for convenience; disable it with `--no-default-features`
# (optionally re-enabling `rational`/`cli`).
default = ["std", "rational", "float", "dyadic", "padic", "decimal", "complex", "poly", "interval", "ball", "matrix", "lattice", "algebraic", "cli"]
std = ["alloc"]
alloc = []

# --- type layers ---
# Arbitrary-precision naturals (`Nat`) and signed integers (`Int`). Requires a
# heap allocator (`alloc`).
int = ["alloc"]
# Arbitrary-precision rationals (`Rational`) built on `Int`. Also enables the
# `InfRational` extended-rational type (±∞ / NaN).
rational = ["int"]
# Exact dyadic rationals (`Dyadic`, i.e. `n·2^-k`) built on `Int`.
dyadic = ["int"]
# Fixed-precision p-adic numbers (`Padic`, elements of ℚ_p) built on `Rational`.
padic = ["rational"]
# Arbitrary-precision base-10 floating point (`Decimal`) built on `Int`.
decimal = ["int"]
# Generic complex numbers (`Complex<T>`), e.g. Gaussian integers `Complex<Int>`.
complex = ["int"]
# Generic polynomials (`Poly<T>`) over any ring/field component type.
poly = ["alloc"]
# Generic dense matrices (`Matrix<T>`); exact determinant for Int/Rational.
matrix = ["alloc"]
# LLL lattice basis reduction over integer lattices (exact rational Gram-Schmidt).
lattice = ["rational"]
# Discrete logarithms modulo n (baby-step giant-step + Pollard's rho). Built on
# `Int`/`ModInt`.
dlog = ["int"]
# Optional arbitrary-precision binary floats (`Float`) with directed rounding,
# aiming at MPFR-class correct rounding. Built on `Int`/`Rational` (decimal I/O
# reuses exact rationals), but NOT part of the integer/rational core contract.
float = ["int", "rational"]
# Interval arithmetic (`Interval`) with outward-rounded `Float` endpoints.
interval = ["float"]
# Ball (midpoint-radius) rigorous arithmetic (`Ball`), Arb-style. Built on `Interval`.
ball = ["interval"]
# Algebraic numbers: exact ℚ(√d) (`Quadratic`) and general real `Algebraic`.
algebraic = ["rational", "poly", "matrix", "float"]

# C ABI: builds the `ffi` module (the only place `unsafe` is allowed). Build a
# C library with `cargo rustc --lib --features ffi --crate-type staticlib`
# (or `--crate-type cdylib`). The generated symbols are declared in
# `include/puremp.h`.
ffi = ["std", "rational", "float"]

# The `puremp` command-line calculator/REPL (gates the binary target below).
cli = ["std", "rational"]

# Optional ecosystem glue: a blanket `RandomSource` impl for `rand_core::RngCore`
# so `rand` generators can drive `Nat`/`Int` random generation. The in-house
# `RandomSource` trait itself needs no dependency; this only adds the bridge.
rand = ["dep:rand_core", "int"]

# Optional serde support: hand-written (no `serde_derive`) Serialize/Deserialize
# for the number types, round-tripping via their exact string forms.
serde = ["dep:serde", "int"]

# Optional `num-traits` bridge: implements Zero/One/Num/Signed/ToPrimitive/
# FromPrimitive for `Int`/`Rational`, and Zero/One for `Nat`/`Decimal`/`Complex`,
# so the types slot into generic numeric code (impls activate for whichever type
# features are also enabled).
num-traits = ["dep:num-traits", "int", "rational"]

# The arithmetic core is a clean-room, dependency-free implementation (see the
# README's "Design & provenance"); the only dependencies are optional, opt-in
# ecosystem bridges that the default build never pulls in.
[dependencies]
rand_core = { version = "0.6", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["alloc"] }
num-traits = { version = "0.2", optional = true, default-features = false }

# Test-only: exercise the `serde` impls through a real format. Not shipped to
# consumers, and only used by the `serde`-gated tests.
[dev-dependencies]
serde_json = "1"

[[bin]]
name = "puremp"
path = "src/bin/puremp/main.rs"
required-features = ["cli"]

# Ad-hoc throughput harness (`cargo run --release --example bench`). Gated so
# `--no-default-features` (bare no_std) builds don't try to compile it.
[[example]]
name = "bench"
required-features = ["std", "float"]

[lints.rust]
# Keep the public surface documented and the internal/external boundary honest.
missing_docs = "warn"
unreachable_pub = "warn"
# Deny (not forbid) so the `ffi` module can opt back in locally with a scoped
# `#[allow(unsafe_code)]`; the entire arithmetic core stays safe.
unsafe_code = "deny"

[profile.release]
# The small limb primitives benefit from aggressive cross-function inlining.
lto = "thin"
